--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,1 +1,44 @@
-// app global css in Sass form
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap')
+@import url('../statics/fonts/index.sass')
+h1, h2, h3, h4, h5, h6, .text-h1, .text-h2, .text-h3, .text-h4, .text-h5, .text-h6, .ballot-card-title, .card-title
+  font-family: "silkaextra_light", sans-serif
+.open-sans
+  font-family: open sans,arial,sans-serif
+
+body
+  font-family: "silkalight", sans-serif
+  letter-spacing: -0.015em
+  box-sizing: border-box
+
+.q-tab__label
+  font-size: inherit
+  line-height: inherit
+  font-weight: inherit
+
+.q-tab__indicator
+  height: 5px
+  border-radius: 5px 5px 0 0
+
+.q-tabs--vertical .q-tab__indicator
+  width: 5px
+  border-radius: 0 5px 5px 0
+
+.no-decoration
+  a:-webkit-any-link 
+    text-decoration: none
+
+@media (min-width: 0)
+  .q-pb-xs-sm
+    padding-bottom: 8px
+  .justify-xs-around
+    justify-content: space-around
+
+@media (min-width: 1024px)
+  .q-pr-md-sm
+    padding-right: 8px
+  .justify-md-between
+    justify-content: space-between
+
+@media (max-width: 400px)
+  body
+    background: #E3E4E8
