--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -1,7 +1,7 @@
 // Quasar Sass (& SCSS) Variables
 // --------------------------------------------------
 // To customize the look and feel of this app, you can override
-// the Sass/SCSS variables found in Quasar's source Sass/SCSS files.
+// the Stylus variables found in Quasar's source Stylus files.
 
 // Check documentation for full list of Quasar variables
 
@@ -12,14 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2
-$secondary : #26A69A
-$accent    : #9C27B0
+$primary   : #571AFF
+$secondary : #CBCAF9
+$accent    : #ffd75e
 
-$dark      : #1D1D1D
-$dark-page : #121212
+$dark      : #071A5F
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
+$positive  : #55c3b3
+$negative  : #ff422a
+$info      : #caccce
 $warning   : #F2C037
