--- a/src/statics/fonts/index.sass
+++ b/src/statics/fonts/index.sass
@@ -17,3 +17,9 @@
   src: url('silka-light-webfont.ttf') format('truetype')
   font-weight: normal
   font-style: normal
+
+@font-face
+  font-family: 'Roboto'
+  src: url('Roboto-Regular.ttf') format('truetype')
+  font-weight: normal
+  font-style: normal
