--- a/src/css/quasar.variables.sass
+++ b/src/css/quasar.variables.sass
@@ -47,11 +47,12 @@ $referendum-color:              #F5898A
 $proposal-color:                #FA7238
 $election-color:                #71DA76
 $leaderboard-color:             #8A8EF5
+$ended-color:                   #F7F7F7
 
 @include new_color(voted,       $voted-color)
 @include new_color(poll,        $poll-color)
 @include new_color(referendum,  $referendum-color)
 @include new_color(proposal,    $proposal-color)
 @include new_color(election,    $election-color)
-@include new_color(leaderboard, $leaderboard-color)
+@include new_color(ended,       $ended-color)
 
