--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -27,6 +27,8 @@ body
   a:-webkit-any-link 
     text-decoration: none
 
+.flex-grow
+  flex-grow: 1
 @media (min-width: 0)
   .q-pb-xs-sm
     padding-bottom: 8px
